--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@borodutch-labs/localize-react": "^1.7.4",
     "@vitejs/plugin-react": "^1.0.9",
+    "firebase": "^9.4.1",
     "preact": "^10.5.15",
     "unfetch": "^4.2.0",
     "valtio": "^1.2.6"
