--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "daisyui": "^1.16.2",
     "firebase": "^9.4.1",
     "preact": "^10.5.15",
+    "react-router-dom": "^6.0.2",
     "unfetch": "^4.2.0",
     "valtio": "^1.2.6"
   },
